@@ -88,16 +88,15 @@ public class LineupServiceImpl implements LineupService, InternalLineupService {
 			throw new IllegalArgumentException(CLOSED_LINEUP.getMessage());
 		}
 
-		boolean isBlacklist = internalBlacklistService._existsByRestaurantIdAndUserId(restaurantId,
-			serviceRequest.getUser().getId());
+		Long userId = serviceRequest.getUser().getId();
+		boolean isBlacklist = internalBlacklistService._existsByRestaurantIdAndUserId(restaurantId, userId);
 
 		if (isBlacklist) {
 			throw new IllegalRequestException(ILLEGAL_ACCESS);
 		}
 
-		List<Lineup> lineups = lineupRepository.findAllByUserIdAndStatuses(
-			serviceRequest.getUser().getId(),
-			Arrays.asList(ArrivalStatusEnum.WAIT, ArrivalStatusEnum.CALL));
+		List<Lineup> lineups = lineupRepository.findAllByUserIdAndStatuses(userId,
+			List.of(ArrivalStatusEnum.WAIT, ArrivalStatusEnum.CALL));
 
 		if (lineups.size() >= MAX_LINEUP_COUNT) {
 			throw new IllegalArgumentException(EXCEED_MAX_LINEUP_COUNT.getMessage());
